[package]
name = "osmium"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.1"
image = "0.24.6"
internment = { version = "0.7.0", features = ["arc", "serde"] }
lazy_static = "1.4.0"
map-macro = "0.2.6"
once_cell = "1"
petgraph = "0.6.3"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9"
thiserror = "1.0.40"
